--- a/dataset_demo.ipynb
+++ b/dataset_demo.ipynb
@@ -364,29 +364,14 @@
     }
    ],
    "source": [
-    "# from utils import youtube as yt_utils\n",
+    "from download_videos import TrackVerseDL, parse_arguments as parse_dl_args\n",
+    "import sys; sys.argv=['']; del sys\n",
     "\n",
-    "# downloader = yt_utils.YoutubeDL('{DATASET_PATH}/videos_mp4')\n",
-    "\n",
-    "# dl_status, video_filepath = downloader.download_video(data['yid'])\n",
-    "# if dl_status == yt_utils.STATUS.FAIL:\n",
-    "#     print(f'[{data['yid']}] Download failed.', flush=True)\n",
-    "# if dl_status == yt_utils.STATUS.DONE:\n",
-    "#     print(f'[{data['yid']}] Already downloaded. Skipping', flush=True)\n",
-    "# else:\n",
-    "#     print(f'[{data['yid']}] Download successful.', flush=True)\n",
-    "\n",
-    "from download_videos import TrackVerseDL\n",
-    "class TrackVerseDLARGS:\n",
-    "    base_dir = DATASET_PATH\n",
-    "    yid_index_fn = ''\n",
-    "    world_size = 1\n",
-    "    rank = 0\n",
-    "    skip_cartoon_filter = True\n",
-    "    skip_aesthetics_filter = True\n",
+    "args = parse_dl_args()\n",
+    "args.base_dir = DATASET_PATH\n",
+    "args.yid_index_fn = ''\n",
     "    \n",
-    "    \n",
-    "downloader = TrackVerseDL(TrackVerseDLARGS())\n",
+    "downloader = TrackVerseDL(args)\n",
     "downloader.process_video(youtube_id=data['yid'], job_id=0)"
    ]
   },
@@ -460,48 +445,83 @@
     "## Parse and extract tracks from a scene clip in a video using the TrackVerse automated pipeline\n",
     "For demo purpose, we only use one scene from the downloaded video and extract the tracks from that scene.\n",
     "\n",
-    "To use the pipeline to create a full dataset, refer to the [pipeline instructions](https://github.com/MMPLab/TrackVerse/tree/main?tab=readme-ov-file#generate-customized-trackverse-dataset).\n",
-    "\n",
-    "### (1) Scene Cut\n"
+    "To use the pipeline to create a full dataset, refer to the [pipeline instructions](https://github.com/MMPLab/TrackVerse/tree/main?tab=readme-ov-file#generate-customized-trackverse-dataset).\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils.segments import SegmentExtractor\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'centernet'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mparse_tracks\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ObjectTracksParser\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mParserArgs\u001b[39;00m:\n\u001b[1;32m      3\u001b[0m     base_dir \u001b[38;5;241m=\u001b[39m BASE_DIR\n",
-      "File \u001b[0;32m~/project/TrackVerse/parse_tracks.py:26\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbytetrack\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbyte_tracker\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BYTETracker\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m misc \u001b[38;5;28;01mas\u001b[39;00m misc_utils, avio\n\u001b[0;32m---> 26\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m detic \u001b[38;5;28;01mas\u001b[39;00m detic_utils\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m youtube \u001b[38;5;28;01mas\u001b[39;00m yt_utils\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmisc\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ProgressTracker\n",
-      "File \u001b[0;32m~/project/TrackVerse/utils/detic.py:7\u001b[0m\n\u001b[1;32m      4\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39minsert(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdetic\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39minsert(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdetic/third_party/CenterNet2/\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcenternet\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconfig\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m add_centernet_config\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdetic\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconfig\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m add_detic_config\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdetectron2\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconfig\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_cfg\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'centernet'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading pretrained CLIP\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yibingwei/.local/lib/python3.8/site-packages/torch/functional.py:507: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3549.)\n",
+      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n",
+      "WARNING:fvcore.common.checkpoint:The checkpoint state_dict contains keys that are not used by the model:\n",
+      "  \u001b[35mroi_heads.mask_head.mask_fcn1.{bias, weight}\u001b[0m\n",
+      "  \u001b[35mroi_heads.mask_head.mask_fcn2.{bias, weight}\u001b[0m\n",
+      "  \u001b[35mroi_heads.mask_head.mask_fcn3.{bias, weight}\u001b[0m\n",
+      "  \u001b[35mroi_heads.mask_head.mask_fcn4.{bias, weight}\u001b[0m\n",
+      "  \u001b[35mroi_heads.mask_head.deconv.{bias, weight}\u001b[0m\n",
+      "  \u001b[35mroi_heads.mask_head.predictor.{bias, weight}\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "from parse_tracks import ObjectTracksParser\n",
-    "class ParserArgs:\n",
-    "    base_dir = BASE_DIR\n",
-    "    index_fn = ''\n",
-    "    dataset_domain = 'LVIS'\n",
-    "    world_size = 1\n",
-    "    rank = 0\n",
-    "paser = ObjectTracksParser(ParserArgs())"
+    "from parse_tracks import ObjectTracksParser, parse_arguments\n",
+    "import sys; sys.argv=['']; del sys\n",
+    "\n",
+    "from bytetrack.byte_tracker import BYTETracker\n",
+    "from utils import detic as detic_utils\n",
+    "from utils import avio\n",
+    "\n",
+    "args = parse_arguments()\n",
+    "args.base_dir = DATASET_PATH\n",
+    "args.yid_index_fn = ''\n",
+    "parser = ObjectTracksParser(args)\n",
+    "\n",
+    "detector = detic_utils.build_detic(\n",
+    "            args.class_prompts,\n",
+    "            args.frame_size,\n",
+    "            args.nms,\n",
+    "            args.conf,\n",
+    "            gpu_id=0\n",
+    "        )\n",
+    "tracker = BYTETracker(\n",
+    "    args.track_thresh,\n",
+    "    args.track_iou_low_thresh,\n",
+    "    args.match_thresh,\n",
+    "    args.frame_rate,\n",
+    "    args.track_buffer,\n",
+    "    args.motion_weight,\n",
+    "    args.mot20\n",
+    ")\n",
+    "\n",
+    "youtube_id = data['yid']\n",
+    "video_filepath = f\"{DATASET_PATH}/videos_mp4/{youtube_id[:2]}/{youtube_id}.mp4\"\n",
+    "segm_filepath = f\"{DATASET_PATH}/videos_segm/{youtube_id[:2]}/{youtube_id}.txt\"\n",
+    "batch_size  = parser.get_max_batch_size(detector, avio.VideoDB(video_filepath).reader.frame_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "segment = list(open(segm_filepath, \"r\"))[23].strip().split(',')\n",
+    "segment = [float(t) for t in segment]\n",
+    "\n",
+    "parser.parse_object_tracks(video_filepath, segment, detector, tracker, batch_size, job_id=0)"
    ]
   }
  ],
