--- a/dataset_demo.ipynb
+++ b/dataset_demo.ipynb
@@ -338,7 +338,7 @@
     }
    ],
    "source": [
-    "data"
+    "list(data.keys())"
    ]
   },
   {
@@ -514,9 +514,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0][1l4wfwq2TLo] Start parsing segment [157.991, 161.862].\n",
+      "[0][1l4wfwq2TLo][62.2%] Parsing object tracks | InferenceSpeed= 1.72 sec video/sec | NumTracks=0.\n",
+      "[0][1l4wfwq2TLo] Finished parsing segment. Found 0 tracks.\n"
+     ]
+    }
+   ],
    "source": [
     "segment = list(open(segm_filepath, \"r\"))[23].strip().split(',')\n",
     "segment = [float(t) for t in segment]\n",
