--- a/dataset_demo.ipynb
+++ b/dataset_demo.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -45,13 +45,12 @@
     }
    ],
    "source": [
-    "HOME_DIR = \"/home/yibingwei/dataset\"\n",
-    "BASE_DIR = f\"{HOME_DIR}/object_tracks_db_fixed_detic\"\n",
     "DATASET_PATH = './trackverse'\n",
-    "subset_dir = 'tracks_subsets/hdvila_lvis/NoTestVids'\n",
+    "\n",
+    "JSONL_DIR = \"/home/yibingwei/dataset/object_tracks_db_fixed_detic/tracks_subsets/hdvila_lvis/NoTestVids\"\n",
     "subset = 'LVIS-184K-CB300-T0.0-NoTestVids.jsonl.gzip'\n",
     "    \n",
-    "subset_gzip = f'{BASE_DIR}/{subset_dir}/{subset}'\n",
+    "subset_gzip = f'{JSONL_DIR}/{subset}'\n",
     "for line in tqdm.tqdm(gzip.open(subset_gzip, 'rt')):\n",
     "    data = json.loads(line)\n",
     "    break"
@@ -78,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -97,31 +96,13 @@
        " 'mp4_filename']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "list(data.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['frame_ts']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['frame_bbox']"
    ]
   },
   {
@@ -134,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -147,14 +128,14 @@
     }
    ],
    "source": [
-    "from download_videos import TrackVerseDL, parse_arguments as parse_dl_args\n",
+    "from download_videos import VideoDownloader, parse_arguments as parse_dl_args\n",
     "import sys; sys.argv=['']; del sys\n",
     "\n",
     "args = parse_dl_args()\n",
     "args.base_dir = DATASET_PATH\n",
     "args.yid_index_fn = ''\n",
     "    \n",
-    "downloader = TrackVerseDL(args)\n",
+    "downloader = VideoDownloader(args)\n",
     "downloader.process_video(youtube_id=data['yid'], job_id=0)"
    ]
   },
@@ -167,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +163,7 @@
    "source": [
     "from extract_tracks import ObjectTrackExtractor, Track\n",
     "import numpy as np\n",
-    "extractor = ObjectTrackExtractor(base_dir=DATASET_PATH, yid_index_fn='') # For this demo, we only extrack one given track so we don't need the yid_index_fn\n",
+    "extractor = ObjectTrackExtractor(base_dir=DATASET_PATH)\n",
     "\n",
     "tracks = [Track(\n",
     "            data['yid'],\n",
@@ -195,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +190,7 @@
        "<IPython.core.display.Video object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +288,7 @@
      "output_type": "stream",
      "text": [
       "[0][1l4wfwq2TLo] Start parsing segment [157.991, 161.862].\n",
-      "[0][1l4wfwq2TLo][62.2%] Parsing object tracks | InferenceSpeed= 1.74 sec video/sec | NumTracks=0.\n",
+      "[0][1l4wfwq2TLo][62.2%] Parsing object tracks | InferenceSpeed= 1.72 sec video/sec | NumTracks=0.\n",
       "[0][1l4wfwq2TLo] Finished parsing segment. Found 0 tracks.\n"
      ]
     }
@@ -330,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -345,26 +326,6 @@
     "meta_data = f\"trackverse/tracks_meta/TrackVerseLVIS/{youtube_id[:2]}/{youtube_id}-meta.jsonl.gzip\"\n",
     "for line in tqdm.tqdm(gzip.open(meta_data, 'rt')):\n",
     "    print(json.loads(line))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(157.99116666666666, 161.79496666666665)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['frame_ts'][0],data['frame_ts'][-1]"
    ]
   }
  ],
