--- a/dataset_demo.ipynb
+++ b/dataset_demo.ipynb
@@ -350,39 +350,33 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "GridspecLayout()",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "0b13308a4ac94cb580216eb06dc40a05"
-      }
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from ipywidgets import Output, GridspecLayout\n",
-    "from IPython import display\n",
-    "\n",
-    "grid = GridspecLayout(1, len(tracks))\n",
-    "for i, track in enumerate(tracks):\n",
-    "    with Output() as out:\n",
-    "        display.display(display.Video(f\"{TMP_PATH}/tracks_mp4/LVIS/{track.fn}\", embed=True))\n",
-    "        grid[0, i] = out\n",
-    "\n",
-    "grid"
+    "Video(f\"{TMP_PATH}/tracks_mp4/LVIS/{tracks[0].fn}\")"
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
-    "ExecuteTime": {
-     "start_time": "2024-06-18T20:26:36.626918Z"
-    }
+    "is_executing": true
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "Video(f\"{TMP_PATH}/tracks_mp4/LVIS/{tracks[1].fn}\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "Video(f\"{TMP_PATH}/tracks_mp4/LVIS/{tracks[2].fn}\")"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
