--- a/dataset_demo.ipynb
+++ b/dataset_demo.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-18T20:25:40.288177Z",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-18T20:25:40.315756Z",
@@ -95,18 +95,18 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "youtube_id = data['yid']"
-   ],
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-06-18T20:25:40.315995Z",
      "start_time": "2024-06-18T20:25:40.315562Z"
-    }
+    },
+    "collapsed": false
    },
-   "execution_count": 4
+   "outputs": [],
+   "source": [
+    "youtube_id = data['yid']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-18T20:25:40.345644Z",
@@ -127,9 +127,11 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "(<STATUS.DONE: 2>, './temporary-folder//videos_mp4/1l/1l4wfwq2TLo.mp4')"
+      "text/plain": [
+       "(<STATUS.DONE: 2>, './temporary-folder/videos_mp4/1l/1l4wfwq2TLo.mp4')"
+      ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-18T20:25:40.384332Z",
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-18T20:25:40.384841Z",
@@ -193,10 +195,16 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<IPython.core.display.Video object>",
-      "text/html": "<video src=\"./temporary-folder//tracks_mp4/LVIS/1l/1l4wfwq2TLo-coat-0b20cf63ce3620af0d1b62b267184ef2.mp4\" controls  >\n      Your browser does not support the <code>video</code> element.\n    </video>"
+      "text/html": [
+       "<video src=\"./temporary-folder/tracks_mp4/LVIS/1l/1l4wfwq2TLo-coat-0b20cf63ce3620af0d1b62b267184ef2.mp4\" controls  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-18T20:26:01.598936Z",
@@ -238,38 +246,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/pmorgado/miniconda3/envs/trackverse/lib/python3.8/site-packages/torch/functional.py:445: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at  /opt/conda/conda-bld/pytorch_1639180588308/work/aten/src/ATen/native/TensorShape.cpp:2157.)\n",
+      "/home/yibingwei/.local/lib/python3.8/site-packages/torch/functional.py:507: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3549.)\n",
       "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n",
       "The checkpoint state_dict contains keys that are not used by the model:\n",
-      "  \u001B[35mroi_heads.mask_head.mask_fcn1.{bias, weight}\u001B[0m\n",
-      "  \u001B[35mroi_heads.mask_head.mask_fcn2.{bias, weight}\u001B[0m\n",
-      "  \u001B[35mroi_heads.mask_head.mask_fcn3.{bias, weight}\u001B[0m\n",
-      "  \u001B[35mroi_heads.mask_head.mask_fcn4.{bias, weight}\u001B[0m\n",
-      "  \u001B[35mroi_heads.mask_head.deconv.{bias, weight}\u001B[0m\n",
-      "  \u001B[35mroi_heads.mask_head.predictor.{bias, weight}\u001B[0m\n"
+      "  \u001b[35mroi_heads.mask_head.mask_fcn1.{bias, weight}\u001b[0m\n",
+      "  \u001b[35mroi_heads.mask_head.mask_fcn2.{bias, weight}\u001b[0m\n",
+      "  \u001b[35mroi_heads.mask_head.mask_fcn3.{bias, weight}\u001b[0m\n",
+      "  \u001b[35mroi_heads.mask_head.mask_fcn4.{bias, weight}\u001b[0m\n",
+      "  \u001b[35mroi_heads.mask_head.deconv.{bias, weight}\u001b[0m\n",
+      "  \u001b[35mroi_heads.mask_head.predictor.{bias, weight}\u001b[0m\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0][1l4wfwq2TLo] Start parsing segment [100, 120].\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pmorgado/miniconda3/envs/trackverse/lib/python3.8/site-packages/detectron2/structures/image_list.py:88: UserWarning: __floordiv__ is deprecated, and its behavior will change in a future version of pytorch. It currently rounds toward 0 (like the 'trunc' function NOT 'floor'). This results in incorrect rounding for negative values. To keep the current behavior, use torch.div(a, b, rounding_mode='trunc'), or for actual floor division, use torch.div(a, b, rounding_mode='floor').\n",
-      "  max_size = (max_size + (stride - 1)) // stride * stride\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0][1l4wfwq2TLo][39.2%] Parsing object tracks | InferenceSpeed= 1.46 sec video/sec | NumTracks=0.\n",
-      "[0][1l4wfwq2TLo] Finished parsing segment. Found 12 tracks.\n"
+      "[0][1l4wfwq2TLo] Start parsing segment [100, 120].\n",
+      "[0][1l4wfwq2TLo][39.2%] Parsing object tracks | InferenceSpeed= 1.54 sec video/sec | NumTracks=0.\n",
+      "[0][1l4wfwq2TLo] Finished parsing segment. Found 11 tracks.\n"
      ]
     }
    ],
@@ -286,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-18T20:26:36.625507Z",
@@ -298,38 +292,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'blazer' from 116.68323333333333 to 119.95316666666666\n",
-      "'person' from 116.68323333333333 to 119.95316666666666\n",
+      "'blazer' from 108.44166666666666 to 119.95316666666666\n",
       "'baseball cap' from 100.06663333333333 to 106.87343333333334\n",
-      "'jersey' from 100.13336666666666 to 106.87343333333334\n",
+      "'jersey' from 100.56713333333333 to 106.87343333333334\n",
       "'baseball cap' from 100.06663333333333 to 106.87343333333334\n",
-      "'jersey' from 100.13336666666666 to 106.87343333333334\n",
-      "'person' from 103.0029 to 108.3082\n",
-      "'person' from 103.0029 to 108.3082\n",
+      "'jersey' from 100.56713333333333 to 106.87343333333334\n",
+      "'person' from 103.0029 to 112.87943333333334\n",
+      "'person' from 103.0029 to 112.87943333333334\n",
       "'person' from 106.94016666666667 to 116.6165\n",
       "'person' from 106.94016666666667 to 116.6165\n",
-      "'person' from 106.94016666666667 to 116.6165\n",
-      "'person' from 106.94016666666667 to 116.6165\n",
-      "'blazer' from 116.68323333333333 to 119.95316666666666\n",
-      "'person' from 116.68323333333333 to 119.95316666666666\n",
-      "'baseball cap' from 100.06663333333333 to 106.87343333333334\n",
-      "'jersey' from 100.13336666666666 to 106.87343333333334\n",
-      "'baseball cap' from 100.06663333333333 to 106.87343333333334\n",
-      "'jersey' from 100.13336666666666 to 106.87343333333334\n",
-      "'person' from 103.0029 to 108.3082\n",
-      "'person' from 103.0029 to 108.3082\n",
-      "'person' from 106.94016666666667 to 116.6165\n",
-      "'person' from 106.94016666666667 to 116.6165\n",
-      "'person' from 106.94016666666667 to 116.6165\n",
-      "'person' from 106.94016666666667 to 116.6165\n",
+      "'person' from 106.94016666666667 to 116.68323333333333\n",
+      "'person' from 106.94016666666667 to 116.68323333333333\n",
       "[0][1l4wfwq2TLo] Start track extraction\n",
-      "[0][1l4wfwq2TLo][Track 1/24][1l/1l4wfwq2TLo-blazer-1f1d07422325929b50afecc68f982f9a.mp4].\n",
-      "[0][1l4wfwq2TLo][Track 2/24][1l/1l4wfwq2TLo-person-23c58804bec71e28c471fe7b6545ff84.mp4].\n",
-      "[0][1l4wfwq2TLo][Track 3/24][1l/1l4wfwq2TLo-baseball-cap-ab4dd53532c8ca125be630bf2287699e.mp4].\n",
-      "[0][1l4wfwq2TLo][Track 4/24][1l/1l4wfwq2TLo-jersey-25e28345ff4cf63700f50b4cf0c2502d.mp4].\n",
-      "[0][1l4wfwq2TLo][Track 7/24][1l/1l4wfwq2TLo-person-732ebb678611e58d48e6af3785817baa.mp4].\n",
-      "[0][1l4wfwq2TLo][Track 9/24][1l/1l4wfwq2TLo-person-0f7f9d9fe53bddbed2894ffc34035c13.mp4].\n",
-      "[0][1l4wfwq2TLo][Track 10/24][1l/1l4wfwq2TLo-person-47a21bc7f8481f6141fae633890d3b9b.mp4].\n",
       "[0][1l4wfwq2TLo] Track extraction done.\n"
      ]
     }
@@ -350,34 +324,85 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "Video(f\"{TMP_PATH}/tracks_mp4/LVIS/{tracks[0].fn}\")"
-   ],
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "is_executing": true
-   }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"./temporary-folder/tracks_mp4/LVIS/1l/1l4wfwq2TLo-blazer-91881e005ec6e2f1e4929f08b39b74af.mp4\" controls  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Video(f\"{TMP_PATH}/tracks_mp4/LVIS/{tracks[0].fn}\")"
+   ]
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"./temporary-folder/tracks_mp4/LVIS/1l/1l4wfwq2TLo-baseball-cap-5aaaf4dca43dac569114abf842fe17c6.mp4\" controls  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Video(f\"{TMP_PATH}/tracks_mp4/LVIS/{tracks[1].fn}\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "Video(f\"{TMP_PATH}/tracks_mp4/LVIS/{tracks[2].fn}\")"
-   ],
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"./temporary-folder/tracks_mp4/LVIS/1l/1l4wfwq2TLo-jersey-3a759cd001715b80342da40ff8f39b10.mp4\" controls  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Video(f\"{TMP_PATH}/tracks_mp4/LVIS/{tracks[2].fn}\")"
+   ]
   }
  ],
  "metadata": {
